# proxygen

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  flake.nix
proxygen/: Cargo.toml
proxygen-macros/: Cargo.toml  README.md
proxygen-macros/src/: lib.rs
proxygen/src/: proxy.rs
proxygen/src/templates/: Cargo  export_indices  intercepted_exports  lib  proxied_exports
src/: exports.rs  main.rs  proxy.rs
src/templates/: Cargo  export_indices  export_indices.rs  intercepted_exports  lib  lib.rs  module_def  orig_exports  proxied_exports  proxied_exports.rs
tests/: Cargo.toml  tests.rs
