[package]
name = "proxygen"
keywords = ["dll", "proxy", "hacking"]
categories = ["command-line-utilities", "development-tools"]
version = "0.2.1"
edition = "2021"
description = "A DLL proxy generator written in Rust"
readme = "README.md"
include = ["/src/**/*", "/LICENSE-MIT"]
license = "MIT"
repository = "https://github.com/WarrenHood/proxygen/"
authors = ["Warren Hood <nullbyte001@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
exe = "0.5.6"
regex = "1.10.2"
tera = "1.19.1"
