[package]
name = "proxygen-macros"
keywords = ["proc-macro", "dll", "proxy", "hacking"]
readme = "README.md"
include = ["/src/**/*"]
description = "proc-macros for proxygen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.39", features = ["extra-traits", "full"] }

