[package]
name = "proxygen"
keywords = ["dll", "proxy", "hacking"]
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"
include = ["/src/**/*"]
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
exe = "0.5.6"
regex = "1.10.2"
tera = "1.19.1"
